[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/ui/tourbillon/time_display.gd" id="1"]

[node name="TimeDisplay" type="Control"]
anchor_right = 0.2
anchor_bottom = 0.1
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="TickLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tick: 0"
add_theme_font_size_override = 24

[node name="BeatLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Beat: 0/10"

[node name="BeatProgress" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
value = 0.0
show_percentage = false